# MUSIC-8903-2016-assignment5-PPM

./: CMakeLists.txt  README.md
ref/: CMakeLists.txt  audioAsInput.txt  audioAsTest.txt  impulseAsInput.txt  impulseAsTest.txt  sawAsTest.txt  sawInput.txt  sineAsTest.txt
src/CombFilter/: CMakeLists.txt
src/PPM/: PeakProgramMeter.cpp
src/Tests/Tests/: Test_Vibrato.cpp
src/inc/: PeakProgramMeter.h
